[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sn-api-helper-mcp"
dynamic = ["version"]
description = "MCP server for SignNow API helper tools (stdio only)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SignNow" }
]
dependencies = [
  "fastmcp>=2.14.1",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "typer>=0.9.0",
]

[project.scripts]
sn-api-helper-mcp = "sn_api_helper_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sn_api_helper_mcp"]

[tool.hatch.version]
source = "vcs"
