[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sn-api-helper-mcp"
version = "0.1.0"
description = "Minimal MCP server (stdio only, no tools)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
dependencies = [
  "fastmcp>=2.14.1",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "typer>=0.9.0",
]

[project.scripts]
sn-api-helper-mcp = "sn_api_helper_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sn_api_helper_mcp"]
